--- a/src/style.css
+++ b/src/style.css
@@ -7,43 +7,6 @@ html {
   font-weight: bold;
 }
 
-/* --------- */
-/*  Preloader */
-/* --------- */
-#preloader {
-  position: fixed;
-  top: 30%;
-  left: 40%;
-  width: 100%;
-  height: 100%;
-  z-index: 999999;
-  background-color: #ffffff;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-@media (max-width: 767px) {
-    #preloader {
-      position: fixed;
-      top: 30%;
-      left: 20%;
-      width: 100%;
-      height: 100%;
-      z-index: 999999;
-      background-color: #ffffff;
-      background-repeat: no-repeat;
-      background-position: center;
-  }
-}
-
-#preloader-none {
-  opacity: 0;
-}
-
-#no-scroll {
-  overflow: hidden;
-  height: 100vh;
-}
 
 /* --------- */
 /*Scrollbar   */
@@ -74,10 +37,11 @@ html {
 /* Navbar Section  */
 /* --------- */
 .sticky {
-  background-color: #212038d8 !important;
+  background-color: #f0f !important;
   transition: all 0.3s ease-out 0s !important;
   box-shadow: 0px 10px 10px 0px rgba(9, 5, 29, 0.171) !important;
   backdrop-filter: blur(15px) !important;
+  
 }
 
 .navbar {
@@ -85,7 +49,7 @@ html {
   transition: all 0.3s ease-out 0s !important;
   padding: 0.3rem 2rem !important;
   font-size: 1.2rem !important;
-  background-color: #343e47;
+  background-color: #f0f;
 }
 
 .navbar-toggler {
@@ -261,12 +225,15 @@ html {
   background-repeat: no-repeat;
   padding-bottom: 30px !important;
   padding-top: 30px !important;
+  background-color: pink;
 }
+
 
 .home-content {
   padding: 3rem 0 0rem !important;
   color: #414141;
   text-align: left;
+  clip-path: polygon(100% 33%,0%, 100%,100%,100%);
 }
 
 .heading-description {
@@ -346,6 +313,7 @@ html {
   text-align: center !important;
   padding-top: 25px;
   color: #414141 !important;
+  background-color: yellow;
 }
 
 .home-about-social-links {
@@ -413,7 +381,7 @@ html {
 /* Footer */
 /* --------- */
 .footer {
-  background-color: #343e47;
+  background-color: #f0f;
   bottom: 0 !important;
 }
 .footer-copywright {
@@ -448,7 +416,7 @@ html {
 }
 
 .blockquote-footer {
-  color: #414141 !important;
+  color: blueviolet!important;
   font-weight: bold;
 }
 /* --------- */
@@ -476,6 +444,10 @@ html {
   opacity: 0.9 !important;
   transition: all 0.5s ease 0s !important;
   height: 100% !important;
+  border-radius: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.10);
+  border: 5px solid tomato;
+  text-align: center;
 }
 .project-card-view:hover {
   transform: scale(1.02) !important;
@@ -609,92 +581,14 @@ html {
     padding-top: 0 !important;
   }
 }
-/* --------- */
-/* Resume */
-/* --------- */
-
-.resume-section {
-  position: relative !important;
-  padding-top: 110px !important;
-  padding-bottom: 30px !important;
-  background-image: var(--section-background-color) !important;
-  color: #414141 !important;
+strong {
+  color: blue;
+}
+hr {
+  background-color: pink;
+  box-shadow: 5px solid 20px;
 }
 
-.resume {
-  padding-top: 50px;
-  padding-bottom: 50px;
-  justify-content: center;
-}
-
-.resume-left {
-  padding-right: 80px !important;
-}
-
-.resume-right {
-  padding-left: 80px !important;
-}
-
-@media (max-width: 767px) {
-  .resume-left {
-    padding-right: 15px !important;
-    padding-left: 15px !important;
-  }
-
-  .resume-right {
-    padding-right: 15px !important;
-    padding-left: 15px !important;
-  }
-}
-.resume .resume-title {
-  font-size: 2em;
-  font-weight: 700;
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-.resume .resume-item {
-  padding: 0 0 10px 25px;
-  margin-top: -2px;
-  border-left: 2px solid #8a49a8;
-  position: relative;
-}
-
-.resume .resume-item .resume-title {
-  line-height: 18px;
-  font-size: 0.9em;
-  background: #5234795d;
-  padding: 8px 15px;
-  display: inline-block;
-  font-weight: 600;
-  margin-bottom: 10px;
-}
-
-.resume .resume-item ul {
-  padding-left: 20px;
-  text-align: justify;
-}
-
-.resume .resume-item ul li {
-  padding-bottom: 10px;
-  list-style: none;
-}
-
-.resume .resume-item:last-child {
-  padding-bottom: 0;
-}
-
-.resume .resume-item::before {
-  content: "";
-  position: absolute;
-  width: 16px;
-  height: 16px;
-  border-radius: 50px;
-  left: -9px;
-  top: 0;
-  background: #fff;
-  border: 2px solid #8a49a8;
-}
 
 .like-item {
   padding-top: 10px !important;
@@ -768,14 +662,21 @@ html {
   margin-left: 10%;
 }
 .skill-wrapper {
-  border-right: 1px solid #414141;
+  border-right: 5px solid #414141;
   box-shadow: 0 4px 5px 3px rgba(59, 56, 59, 0.459) !important;
   background-color: transparent !important;
   opacity: 0.9 !important;
   transition: all 0.5s ease 0s !important;
+  color: red !important;
+  cursor: all-scroll ;
+  font-size: 1.4em !important;
+  position: relative;
+  
 }
+
 .download-button {
-  background-color: #343e47 !important;
+  background-color:#343e47  !important;
+  border-radius: 100px;
 }
 
 .download-button:hover {
@@ -794,6 +695,9 @@ html {
   width: 65%;
   margin-top: 12%;
   margin-left: 25%;
+  width: 90%;
+  height: 80%;
+  clip-path: polygon(100% 33%, 0%,100%, 100%, 100%);
 }
 
 @media (max-width: 767px) {
@@ -802,7 +706,6 @@ html {
     height: 80%;
     width: 50%;
     margin-top: 12%;
-    margin-left: 25%;
   }
 }
 
@@ -814,4 +717,16 @@ html {
   .skill-tools-wrapper{
     flex-direction: column;
   }
+}
+.button-key{
+  margin-right: 10px;
+  margin-top: 2rem;
+  border-radius: 10px;
+  cursor: pointer;
+  text-transform: uppercase;
+}
+.img{
+  background-color: purple;
+  clip-path: polygon(100%,33%,0%,100%,100%,100%);
+  margin: 0 auto;
 }
